Fix responsive design on tablets for Activités à Marseille section

--- a/css/activities.css
+++ b/css/activities.css
@@ -81,9 +81,12 @@
     flex-wrap: wrap;
   }
 
-  .main__section--activities .card,
-  .twin-cards-wrapper {
+  .main__section--activities .card {
     flex: 1 1 48%;
+  }
+
+  .twin-cards-wrapper {
+    flex: 1 1 47%;
   }
 }
 
